# snowflake-query-optimizer

./: .gitignore  LICENSE  README.md  nginx_default_local.conf  opik-docker.yml  planning.md  pyproject.toml  requirements.txt  setup.py  tough_sql_antipatterns.sql  unoptimised_sql.sql  unoptimised_sql2.sql  unoptimised_sql_one_query.sql
.streamlit/: config.toml
src/snowflake_optimizer/: Hello.py  Home.py  __init__.py  ai_clients.py  app.py  cache.py  connections.py  constants.py  data_collector.py  models.py  query_analyzer.py  trulens_int.py  utils.py
src/snowflake_optimizer/assets/: bg.css  style.css
src/snowflake_optimizer/pages/: 1_Query_History.py  2_Manual_Analysis.py  3_Advanced_Optimization.py  Advanced_Optimization.py  Manual_Analysis.py  Query_History.py  manual_analysis.py  query_history.py
tests/: conftest.py  test_Query_History.py  test_batch_analysis.py  test_cache.py  test_connections.py  test_data_collector.py  test_end_to_end.py  test_excel_export.py  test_manual_analysis.py  test_query_analyzer.py  test_utils.py
